Criando a funcionalidade da opção 5 e arrumando erros da opção 4